[gd_scene load_steps=17 format=3 uid="uid://bx37itkfim3pw"]

[ext_resource type="Script" path="res://knight.gd" id="1_4csyi"]
[ext_resource type="SpriteFrames" uid="uid://th3umiprsvia" path="res://Assets/Skins/helmknight.tres" id="3_c3dn4"]
[ext_resource type="AudioStream" uid="uid://dnyn0ks7nvjcb" path="res://Assets/brackeys_platformer_assets/sounds/power_up.wav" id="4_45am3"]
[ext_resource type="Texture2D" uid="uid://dnrnbrw3tu6nw" path="res://Assets/heart sprite/Heart.png" id="6_di1gs"]
[ext_resource type="Shader" path="res://holy.gdshader" id="7_j1gpa"]
[ext_resource type="Texture2D" uid="uid://blyn72qg4hjg3" path="res://Assets/sword.png" id="9_21f75"]
[ext_resource type="Texture2D" uid="uid://duf4lqv2n6j00" path="res://Assets/flare_01_0.png" id="9_eyhag"]
[ext_resource type="Shader" path="res://FloorData/flash.gdshader" id="10_4ogie"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hdxep"]
radius = 7.0
height = 18.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ycyda"]
shader = ExtResource("7_j1gpa")
shader_parameter/angle = 0.0
shader_parameter/position = 0.0
shader_parameter/spread = 1.0
shader_parameter/cutoff = 0.1
shader_parameter/falloff = 1.0
shader_parameter/edge_fade = 0.15
shader_parameter/speed = 1.0
shader_parameter/ray1_density = 8.0
shader_parameter/ray2_density = 30.0
shader_parameter/ray2_intensity = 0.3
shader_parameter/color = Color(1, 0.9, 0.65, 0.8)
shader_parameter/hdr = false
shader_parameter/seed = 5.0

[sub_resource type="Gradient" id="Gradient_u1vbj"]
offsets = PackedFloat32Array(0, 0.486667, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Animation" id="Animation_x20fp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Aura:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:material:shader_parameter/falloff")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sword:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sword:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.806357]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sword:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, -264)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ColorRect:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Flash:material:shader_parameter/radius")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.001]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Flash:material:shader_parameter/intensity")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Flash:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ftcpq"]
resource_name = "breakfloor"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Aura:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:material:shader_parameter/falloff")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.096]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sword:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sword:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [-0.806357, 0.4365, 0.790427, 1.65806, 2.26893, 3.05433, 3.83972, 4.53786, 5.41052, 0.0, 0.0, 5.58505, -3.49066]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sword:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.8, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(2, -264), Vector2(9, -36), Vector2(17, -8.21053), Vector2(25, 3), Vector2(18, 24), Vector2(1, 29), Vector2(-21, 23), Vector2(-32, 1), Vector2(-22, -20), Vector2(-0.999996, -28), Vector2(19, -18), Vector2(19, -18), Vector2(6, 24), Vector2(5, 33)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ColorRect:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Flash:material:shader_parameter/radius")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(2.5, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.001, 0.659]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Flash:material:shader_parameter/intensity")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(2.5, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Flash:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(2.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rf0bf"]
_data = {
"RESET": SubResource("Animation_x20fp"),
"breakfloor": SubResource("Animation_ftcpq")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3xjr0"]
shader = ExtResource("10_4ogie")
shader_parameter/center = Vector2(0.5, 0.5)
shader_parameter/radius = 0.001
shader_parameter/intensity = 1.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_22nj5"]
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 5.0
emission_ring_radius = 5.0
emission_ring_inner_radius = 0.0
gravity = Vector3(0, -90, 0)
tangential_accel_min = -50.0
tangential_accel_max = 50.0
hue_variation_min = -1.0
hue_variation_max = 1.0

[node name="Knight" type="CharacterBody2D"]
script = ExtResource("1_4csyi")

[node name="HealEffect" type="CPUParticles2D" parent="."]
texture_filter = 1
emitting = false
amount = 5
one_shot = true
texture = ExtResource("6_di1gs")
emission_shape = 1
emission_sphere_radius = 13.92
gravity = Vector2(0, -200)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
process_mode = 3
texture_filter = 1
position = Vector2(0, -6)
sprite_frames = ExtResource("3_c3dn4")
animation = &"fall"
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_hdxep")

[node name="PowerUpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_45am3")
volume_db = -15.0
bus = &"SFX"

[node name="DamageTimer" type="Timer" parent="."]

[node name="GodTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_ycyda")
offset_left = -31.0
offset_top = -248.0
offset_right = 31.0
offset_bottom = 37.0
color = Color(1, 1, 1, 0.439216)

[node name="GPUParticles2D" type="CPUParticles2D" parent="."]
texture_filter = 1
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 1.0
texture = ExtResource("9_eyhag")
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
scale_amount_min = 0.2
scale_amount_max = 0.2
color_ramp = SubResource("Gradient_u1vbj")

[node name="Aura" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_eyhag")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rf0bf")
}

[node name="Sword" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(2, -264)
rotation = -0.806357
texture = ExtResource("9_21f75")

[node name="Flash" type="ColorRect" parent="."]
visible = false
z_index = 5
z_as_relative = false
material = SubResource("ShaderMaterial_3xjr0")
offset_left = -265.0
offset_top = -252.0
offset_right = 265.0
offset_bottom = 245.0

[node name="godeffect" type="GPUParticles2D" parent="."]
visible = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_22nj5")

[connection signal="timeout" from="DamageTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="GodTimer" to="." method="_on_god_timer_timeout"]
